[edit]: js, seleziono variabili iniziali

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
   <title>Document</title>
 </head>
 <body class="bg-dark  ">
-  
+  <div id="game-container" class="container">
+    <button id="btn-genera">
+      COMINCIA A GIOCARE
+    </button>
+
+    <div class="numeri-generati"></div>
+    <div class="risultati"></div>
+  </div>  
 
  
  
