[add]: function per far apparire e sparire i num

--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
   <!-- /bootstrap -->
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-dark  ">
-  <div id="game-container" class="container">
+<body class="bg-dark pt-5 ">
+  <div id="game-container" class="container mt-5 d-flex justify-content-center">
     <button id="btn-genera">
       COMINCIA A GIOCARE
     </button>
 
-    <div class="numeri-generati"></div>
-    <div class="risultati"></div>
+    <h1 class="numeri-generati"></h1>
+    <h1 class="risultati"></h1>
   </div>  
 
  
