[edit]: stampa elementi in pagina

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-dark pt-5 ">
-  <div id="game-container" class="container mt-5 d-flex justify-content-center">
+  <div id="game-container" class="container mt-5 d-flex flex-column align-items-center">
     <button id="btn-genera">
       COMINCIA A GIOCARE
     </button>
 
     <h1 class="numeri-generati"></h1>
     <h1 class="risultati"></h1>
+    <h1 class="numeri-indovinati d-none"> I numeri indovinati in ordine corretto sono: </h1>
   </div>  
 
  
